--- a/docs/.vuepress/public/manifest.json
+++ b/docs/.vuepress/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "JQiue's personal blog",
+  "name": "JQiue's notes",
   "short_name": "JQiue",
-  "description": "JQiue 的个人博客",
+  "description": "JQiue 的个人笔记静态网站",
   "lang": "zh-CN",
   "orientation": "portrait-primary",
   "icons": [
